--- a/snake/anasayfa.css
+++ b/snake/anasayfa.css
@@ -55,7 +55,7 @@
 
 .play {
   font-size: 100px;
- /font-family: "Candara";
+  font-family: "Candara";
   color: rgb(236, 236, 236);
   font-weight: bold;
   line-height: 0.4;
@@ -83,5 +83,9 @@
 .quit:hover{
   color: rgb(77,240,23);
 }
+
+
+
+
 
 
